--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section id="banner_part">
         <div class="container">
           <div class="text">
-            <h1>Jonathon Kubb</h1>
+            <h1>Jonathon Kubbbbbbbbbbb</h1>
             <h2>Photography</h2>
             <p>Based in New York since 2001</p>
           </div>
